media/transmission/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: media
  name: transmission
  labels:
    app: transmission
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: transmission
      release: transmission
  template:
    metadata:
      labels:
        app: transmission
        release: transmission
    spec:
      volumes:
        - name: media
          persistentVolumeClaim:
            claimName: media
        - name: transmission
          persistentVolumeClaim:
            claimName: transmission
      dnsPolicy: None
      dnsConfig:
        nameservers:
          - 8.8.8.8
      securityContext:
        runAsUser: "1000"
        runAsGroup: "1000"
        fsGroup: "1000"
      containers:
        - name: transmission
          image: transmission
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 9091
              protocol: TCP
          securityContext:
            capabilities:
              add:
                - NET_ADMIN
          volumeMounts:
            - mountPath: /data
              name: transmission
              subPath: configs/transmission-data
            - mountPath: /downloads/transmission
              name: media
              subPath: downloads/transmission
            - mountPath: /config
              subPath: /config
              name: configs
          resources: {}
