media/transmission/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: transmission
  namespace: media
  labels:
    app: transmission
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 9091
      protocol: TCP
      name: http
  selector:
    app: transmission
    release: transmission
