media/transmission/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: transmission
  namespace: transmission
spec:
  parentRefs:
    - name: homelab
      namespace: envoy-gateway-system
  hostnames:
    - "transmission.int.kyledev.co"
  rules:
    - backendRefs:
        - name: transmission
          port: 80
