media/transmission/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
  name: transmission
  namespace: media
spec:
  ingressClassName: nginx
  rules:
    - host: transmission.int.kyledev.co
      http:
        paths:
          - backend:
              service:
                name: transmission
                port:
                  name: http
            path: /transmission/rpc
            pathType: Prefix

          - backend:
              service:
                name: transmission
                port:
                  name: http
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - transmission.int.kyledev.co
      secretName: transmission-kyledev-tls-prod
