media/transmission/manifest.yaml
---
# Source: homelab/charts/transmission/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: transmission
  labels:
    helm.sh/chart: transmission-0.1.11
    app.kubernetes.io/name: transmission
    app.kubernetes.io/instance: transmission
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 9091
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: transmission
    app.kubernetes.io/instance: transmission
---
# Source: homelab/charts/transmission/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transmission
  labels:
    helm.sh/chart: transmission-0.1.11
    app.kubernetes.io/name: transmission
    app.kubernetes.io/instance: transmission
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: transmission
      app.kubernetes.io/instance: transmission
  template:
    metadata:
      labels:
        helm.sh/chart: transmission-0.1.11
        app.kubernetes.io/name: transmission
        app.kubernetes.io/instance: transmission
        app.kubernetes.io/version: "1.16.0"
        app.kubernetes.io/managed-by: Helm
    spec:
      serviceAccountName: transmission
      securityContext:
        {}
      containers:
        - name: transmission
          securityContext:
            capabilities:
              add:
              - NET_ADMIN
            privileged: true
          image: "haugene/transmission-openvpn:5.3.2"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 9091
              protocol: TCP
          volumeMounts:
            - mountPath: /downloads/transmission
              name: media
              subPath: downloads/transmission
            - mountPath: /config/transmission-home
              name: transmission
              subPath: config/transmission-home
      volumes:
        - name: media
          persistentVolumeClaim:
            claimName: media
        - name: transmission
          persistentVolumeClaim:
            claimName: transmission
---
# Source: homelab/charts/transmission/templates/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: transmission
  labels:
    helm.sh/chart: transmission-0.1.11
    app.kubernetes.io/name: transmission
    app.kubernetes.io/instance: transmission
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
spec:
  parentRefs:
    - name: homelab
      namespace: envoy-gateway-system
  hostnames:
    - "transmission.int.kyledev.co"
    - "transmission.ts.kyledev.co"
  rules:
    - backendRefs:
      - group: ""
        kind: Service
        name: transmission
        port: 80
